--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,5 +1,5 @@
 .btns{
-    @apply bg-dark w-2/5 text-white font-bold cursor-pointer md:py-2 md:px-16 md:w-auto hover:bg-reset hover:text-dark  md:inline-block;
+    @apply bg-dark w-1/5 text-white font-bold cursor-pointer md:py-2 md:px-16 hover:bg-reset hover:text-dark  md:inline-block;
 }
 .btn-custom{
     @apply capitalize text-dark bg-gray-100 w-2/5 md:px-16 md:py-2 md:w-24;
